Tests/Modules/Error/Types/.build/catchthrow.pr
{
  "name": "CatchThrow",
  "description": "Sets %throwKey% to the current error key (or null) in the CatchThrow step.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %throwKey% = %!error.Key%",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%throwKey%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": null,
              "type": "object"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/CatchThrow.goal",
  "prPath": "/.build/catchthrow.pr",
  "hash": "a9d4109da4f4fdea5487a25def29160b0e3b117c4c5a4ad46277163ff63cc402",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}